<resources>
    <string name="app_name">BankApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="default_button">Default Value</string>
    <string name="user_income">Your income (optional) </string>
    <string name="user_goal">Your budget goal (optional)</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Add">Add</string>
    <string name="Remove">Remove</string>
    <string name="Amount">Amount</string>
    <string name="_0_00">0.00</string>
    <string name="transaction_category">CATEGORY</string>
    <string name="transaction_name">NAME</string>
    <string name="transaction_date">DATE</string>
    <string name="Category">Category</string>
    <string name="transaction_amount">Amount\n</string>
    <string name="Home">Home</string>
    <string name="Edit_details">Edit profile</string>
    <string name="logout">Logout</string>
    <string name="username">Email</string>
    <string name="budget">Budget Goal (optional)</string>
    <string name="Update_profile">Update</string>
    <string name="Delete_user">Delete</string>
    <string name="user_economy">Your economy</string>
    <string name="message">Message</string>
    <string name="date">24/x/x/</string>
    <string name="Message">Message:</string>
</resources>