
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">




        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp">
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/user_income"
            android:inputType="text"
            android:layout_marginBottom="16dp">
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/user_goal"
            android:inputType="text"
            android:layout_marginBottom="16dp">
        </EditText>


    <Button
        android:id="@+id/addTransactionBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Update_profile"
        />

</LinearLayout>
