<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">




        <TextView
            android:id="@+id/removeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Type in details to delete"
            android:textColor="@color/font_color_active"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="This action cannot be redeemed"
            android:textColor="@color/font_color_inactive"
            android:layout_marginBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="16dp">
        </EditText>


        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp">
        </EditText>


    <Button
        android:id="@+id/removeUserBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Delete_user"
        />

</LinearLayout>
